--- a/src/Kangaroo.API/Kangaroo.API.csproj
+++ b/src/Kangaroo.API/Kangaroo.API.csproj
@@ -3,7 +3,6 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 
@@ -27,8 +26,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="11.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
 		<PackageReference Include="Scrutor" Version="4.2.0" />
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -41,6 +42,7 @@
 		<ProjectReference Include="..\Kangaroo.Infrastructure.DatabaseRepositories\Kangaroo.Infrastructure.DatabaseRepositories.csproj" />
 		<ProjectReference Include="..\Kangaroo.Models.DatabaseEntities\Kangaroo.Models.DatabaseEntities.csproj" />
 		<ProjectReference Include="..\Kangaroo.Models.Entities\Kangaroo.Models.Entities.csproj" />
+		<ProjectReference Include="..\Kangaroo.Models.OptionsSettings\Kangaroo.Models.OptionsSettings.csproj" />
 		<ProjectReference Include="..\Kangaroo.Models\Kangaroo.Models.csproj" />
 		<ProjectReference Include="..\Kangaroo.Services\Kangaroo.Services.csproj" />
 	</ItemGroup>
